fix: добавить проверку на null в InMemoryTaskManager, реализовать добавление и удаление в истории через LinkedList, реализовать добавление в историю вызовом метода менеджера истории