@@ -2,23 +2,26 @@ package service;
 
 import model.Task;
 
+import java.util.LinkedList;
 import java.util.ArrayList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private static final int HISTORY_SIZE = 10;
-    private final List<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
-        history.add(task);
-        if (history.size() > HISTORY_SIZE) {
-            history.remove(0);
+        if (task != null) {
+            history.addLast(task);
+            if (history.size() > HISTORY_SIZE) {
+                history.removeFirst();
+            }
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history);
+        return new LinkedList<>(history);
     }
 }
